# pdf-inspector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
samples/: lopdf.md  lopdf_new.md  mineru.md
src/: detector.rs  extractor.rs  glyph_names.rs  lib.rs  markdown.rs  tables.rs  tounicode.rs
tests/: integration_tests.rs
